--- a/tempo/styles.css
+++ b/tempo/styles.css
@@ -6,3 +6,65 @@ body {
 p {
   margin: 0px;
 }
+
+button {
+  background-color: #5a73d0;
+  border: 1px solid #5a73d0;
+  border-radius: 8px;
+  padding: 8px 16px;
+  min-width: 100px;
+  color: #ffffff;
+}
+
+button:hover {
+  background-color: #4860b7;
+  border: 1px solid #4860b7;
+  cursor: pointer;
+}
+
+.mt-2 {
+  margin-top: 1rem;
+}
+
+/* Section style */
+#register-page {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  min-width: 100vw;
+  min-height: 100vh;
+  background: linear-gradient(180deg, #984376 0%, #c64577 100%);
+}
+
+#paper {
+  background: #ffffff;
+  padding: 64px;
+  max-width: 500px;
+  border-radius: 16px;
+}
+
+.form-section {
+  display: grid;
+  grid-template-columns: repeat(2, 1fr);
+  gap: 16px 32px;
+}
+
+.form-control {
+  display: flex;
+  flex-direction: column;
+  gap: 8px;
+}
+
+.form-input {
+  padding: 8px 16px;
+  background-color: #fafafa;
+  border: 1px solid #dddddd;
+  border-radius: 8px;
+}
+
+.form-radio-group {
+  display: flex;
+  align-items: center;
+  flex-wrap: wrap;
+  min-height: 34px;
+}
