--- a/interval/styles.css
+++ b/interval/styles.css
@@ -18,6 +18,7 @@ p {
   width: 250px;
   min-height: 100vh;
   box-shadow: 0px 0px 5px rgba(0, 0, 0, 0.25);
+  flex: 1 0 auto;
 }
 
 #navbar {
@@ -27,6 +28,11 @@ p {
   right: 0;
   height: 64px;
   width: calc(100vw - 250px);
+  box-shadow: 0px 0px 5px rgba(0, 0, 0, 0.25);
+}
+
+#content {
+  width: 100%;
 }
 
 .form-input {
@@ -36,13 +42,13 @@ p {
   padding: 12px 16px;
 }
 
-/* Section Styles */
+/* Navbar Styles */
 .navbar-container {
   display: flex;
   justify-content: space-between;
   align-items: center;
   gap: 24px;
-  padding: 8px 16px;
+  padding: 8px 32px;
 }
 
 .profile-image {
@@ -57,6 +63,7 @@ p {
   flex: 1;
 }
 
+/* Sidebar Styles */
 .sidebar-wrapper {
   display: flex;
   height: 100%;
@@ -107,4 +114,60 @@ p {
 
 .menu-item.active {
   color: #627aed;
+}
+
+/* Content Styles */
+.topic {
+  display: flex;
+  align-items: center;
+  gap: 16px;
+}
+
+.topic .topic-icon {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 32px;
+  height: 32px;
+  background-color: #627aed;
+  border-radius: 8px;
+}
+
+#dashboard {
+  padding: 96px 32px 32px 32px;
+}
+
+#dashboard .dashboard-wrapper {
+  display: flex;
+  align-items: center;
+  width: 100%;
+  gap: 24px;
+}
+
+#dashboard .dashboard-box {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  flex: 1 0 auto;
+  padding: 24px 24px;
+  gap: 8px;
+  border-radius: 16px;
+}
+
+#dashboard .dashboard-box:nth-child(1) {
+  background-color: #ccdffc;
+}
+#dashboard .dashboard-box:nth-child(2) {
+  background-color: #fbf3da;
+}
+#dashboard .dashboard-box:nth-child(3) {
+  background-color: #ece2fb;
+}
+
+#dashboard .dashboard-box .title {
+  font-size: 18px;
+}
+
+#dashboard .dashboard-box .number {
+  font-size: 32px;
 }
