feat: update style of font

--- a/interval/styles.css
+++ b/interval/styles.css
@@ -1,6 +1,7 @@
 body {
   padding: 0px;
   margin: 0px;
+  font-family: "Prompt", sans-serif;
   font-size: 1rem;
 }
 
@@ -47,7 +48,6 @@ table td {
   right: 0;
   height: 64px;
   width: calc(100vw - 250px);
-  box-shadow: 0px 0px 5px rgba(0, 0, 0, 0.25);
 }
 
 #content {
@@ -190,12 +190,12 @@ table td {
 }
 
 #dashboard .dashboard-box .number {
-  font-size: 32px;
+  font-size: 36px;
 }
 
 /* Activity Styles */
 #activity {
-  margin-top: 24px;
+  margin-top: 48px;
 }
 
 #activity-table {
